--- a/src/CsvParser.csproj
+++ b/src/CsvParser.csproj
@@ -9,6 +9,11 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.1.0" />
+    <PackageReference Include="Spectre.Console" Version="0.50.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="CSVs\" />
   </ItemGroup>
 
 </Project>
